--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,7 +157,7 @@ dependencies {
 
     // Material Design
     implementation "androidx.compose.material:material"
-    implementation "androidx.compose.material3:material3:1.1.0-alpha06"
+    implementation "androidx.compose.material3:material3:1.1.0-beta01"
     implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
@@ -173,10 +173,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-animation:0.26.4-beta"
     implementation "androidx.compose.animation:animation-graphics"
 
-    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.activity:activity-compose:1.7.0"
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.0"
     testImplementation 'junit:junit:4.13.2'
 }
 
