--- a/wearOS/build.gradle
+++ b/wearOS/build.gradle
@@ -99,13 +99,13 @@ dependencies {
     implementation "com.google.android.horologist:horologist-compose-layout:0.2.5"
     implementation "com.google.accompanist:accompanist-pager:0.28.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-beta01"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     implementation "androidx.wear:wear-input:1.1.0"
     implementation 'androidx.wear:wear:1.2.0'
 
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.0"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
     androidTestImplementation 'androidx.test:core:1.5.0'
