--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,22 +81,20 @@ android {
     }
 
     buildFeatures {
-        // Enables Jetpack Compose for this module
         compose true
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_19
         targetCompatibility JavaVersion.VERSION_19
-
     }
 
-    kotlinOptions {
-        jvmTarget = "19"
+    kotlin {
+        jvmToolchain(19)
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.6"
+        kotlinCompilerExtensionVersion = "1.4.7"
     }
     packagingOptions {
         resources {
@@ -157,7 +155,7 @@ dependencies {
 
     // Material Design
     implementation "androidx.compose.material:material"
-    implementation "androidx.compose.material3:material3:1.1.0-rc01"
+    implementation "androidx.compose.material3:material3:1.1.0"
     implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
@@ -168,15 +166,15 @@ dependencies {
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata"
     // Jetpack Utils
-    implementation "com.google.accompanist:accompanist-flowlayout:0.26.4-beta"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.4-beta"
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.26.4-beta"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.30.1"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.30.1"
     implementation "androidx.compose.animation:animation-graphics"
 
     implementation "androidx.activity:activity-compose:1.7.1"
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.2"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
     testImplementation 'junit:junit:4.13.2'
 }
 
