--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ ij_smart_tabs = false
 ij_wrap_on_typing = false
 
 
-[{*.gradle.kts,*.kt,*.kts,*.main.kts}]
+[{*.kt,*.kts}]
 ij_kotlin_align_in_columns_case_branch = false
 ij_kotlin_align_multiline_binary_operation = false
 ij_kotlin_align_multiline_extends_list = false
