--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,16 +41,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                        android:host="rozpierog.github.io"
-                        android:pathPattern=".*"
-                        android:pathPrefix="/"
-                        android:scheme="https" />
-                <data
-                        android:host="rozpierog.github.io"
-                        android:pathPattern=".*"
-                        android:pathPrefix="/"
-                        android:scheme="http" />
+                <data android:scheme="https"/>
+                <data android:scheme="http"/>
+                <data android:host="rozpierog.github.io"/>
+                <data android:pathPrefix="/"/>
+                <data android:pathPattern=".*"/>
             </intent-filter>
             <meta-data
                     android:name="default-url"
