--- a/.github/workflows/Emulator.yml
+++ b/.github/workflows/Emulator.yml
@@ -26,15 +26,16 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: set up JDK 1.19
+        uses: actions/setup-java@v2
+        with:
+          java-version: '19'
+          distribution: zulu
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Create empty keystore
         run: echo "storeFile=/" > keystore.properties
-      - name: set up JDK 1.19
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.19
       - name: Android Emulator Runner
         uses: ReactiveCircus/android-emulator-runner@v2.26.0
         with:
