--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
+    id "kotlin-parcelize"
 }
 
 android {
