--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -55,7 +55,7 @@ jobs:
                   COMMENT="${COMMENT//$'\n'/'%0A'}"
                   COMMENT="${COMMENT//$'\r'/'%0D'}"
                   echo "COMMENT=$COMMENT" >> $GITHUB_ENV
-            - uses: actions/github-script@v3
+            - uses: actions/github-script@v6
               with:
                   script: |
                       var comment = `${{ env.COMMENT }}`
@@ -63,7 +63,7 @@ jobs:
                       comment = comment.replace(/%0A/g, '\n')
                       comment = comment.replace(/%0D/g, '\r')
                       comment = "```" + comment + "```"
-                      github.issues.createComment({
+                      github.rest.issues.createComment({
                         issue_number: context.issue.number,
                         owner: context.repo.owner,
                         repo: context.repo.repo,
