Update files after release

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ captures/
 # Uncomment the following lines if you do not want to check your keystore files in.
 *.jks
 *.keystore
+pc-api-*.json
+json_key.json
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
