--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,15 +148,14 @@ dependencies {
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
     playStoreImplementation 'com.google.android.gms:play-services-wearable:18.1.0'
     playStoreImplementation "androidx.wear:wear-remote-interactions:1.0.0"
-    playStoreImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.1'
+    playStoreImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
 
     // Tooling support (Previews, etc.)
     debugImplementation "androidx.compose.ui:ui-tooling"
     implementation "androidx.compose.ui:ui-tooling-preview"
 
     // Material Design
-    implementation "androidx.compose.material:material"
-    implementation "androidx.compose.material3:material3:1.2.0"
+    implementation "androidx.compose.material3:material3:1.3.0-alpha05"
     implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
@@ -170,10 +169,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
     implementation "androidx.compose.animation:animation-graphics"
 
-    implementation "androidx.activity:activity-compose:1.8.2"
+    implementation "androidx.activity:activity-compose:1.9.0"
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.6"
     testImplementation 'junit:junit:4.13.2'
     androidTestUtil 'androidx.test:orchestrator:1.4.2'
 }
