--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -19,7 +19,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+//            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         benchmark {
@@ -77,7 +77,7 @@ dependencies {
 
     api "androidx.room:room-runtime:$room_version"
     api 'androidx.test.ext:junit-ktx:1.1.5'
-    api "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.8.0"
     implementation 'androidx.work:work-runtime-ktx:2.9.0'
     ksp "androidx.room:room-compiler:$room_version"
     api "androidx.room:room-ktx:$room_version"
