--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,8 +145,8 @@ dependencies {
     }
     implementation platform("androidx.compose:compose-bom:$compose_bom_version")
 
-    instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
-    playStoreImplementation 'com.google.android.gms:play-services-wearable:18.1.0'
+    instantImplementation('com.google.android.gms:play-services-instantapps:18.1.0')
+    playStoreImplementation 'com.google.android.gms:play-services-wearable:18.2.0'
     playStoreImplementation "androidx.wear:wear-remote-interactions:1.0.0"
     playStoreImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
 
@@ -155,13 +155,13 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview"
 
     // Material Design
-    implementation "androidx.compose.material3:material3:1.3.0-alpha05"
+    implementation "androidx.compose.material3:material3:1.3.0-beta03"
     implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.8.0-alpha07"
+    implementation "androidx.navigation:navigation-compose:2.8.0-beta03"
 
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata"
@@ -172,7 +172,7 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.9.0"
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.6"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.8"
     testImplementation 'junit:junit:4.13.2'
     androidTestUtil 'androidx.test:orchestrator:1.4.2'
 }
