--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'com.jaredsburrows.license'
+    id("org.jetbrains.kotlin.plugin.compose") version "2.0.0"
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -155,13 +156,13 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview"
 
     // Material Design
-    implementation "androidx.compose.material3:material3:1.3.0-beta04"
+    implementation "androidx.compose.material3:material3:1.3.0"
     implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.8.0-beta05"
+    implementation "androidx.navigation:navigation-compose:2.8.0"
 
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata"
@@ -169,10 +170,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
     implementation "androidx.compose.animation:animation-graphics"
 
-    implementation "androidx.activity:activity-compose:1.9.0"
+    implementation "androidx.activity:activity-compose:1.9.2"
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.8"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.7.1"
     testImplementation 'junit:junit:4.13.2'
     androidTestUtil 'androidx.test:orchestrator:1.5.0'
 }
