--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
     id "kotlin-parcelize"
+    id("org.jetbrains.kotlin.plugin.compose") version "2.0.0"
 }
 
 android {
@@ -77,8 +78,8 @@ dependencies {
 
     api "androidx.room:room-runtime:$room_version"
     api 'androidx.test.ext:junit-ktx:1.2.1'
-    api "androidx.lifecycle:lifecycle-livedata-ktx:2.8.3"
-    implementation 'androidx.work:work-runtime-ktx:2.9.0'
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.8.5"
+    implementation 'androidx.work:work-runtime-ktx:2.9.1'
     ksp "androidx.room:room-compiler:$room_version"
     api "androidx.room:room-ktx:$room_version"
     androidTestApi "androidx.room:room-testing:$room_version"
