--- a/wearOS/build.gradle
+++ b/wearOS/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.jaredsburrows.license'
+    id("org.jetbrains.kotlin.plugin.compose") version "2.0.0"
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -97,14 +98,14 @@ dependencies {
     implementation "com.google.android.horologist:horologist-compose-layout:0.5.20"
     implementation "com.google.accompanist:accompanist-pager:0.30.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
-    implementation 'androidx.activity:activity-compose:1.9.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.3"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.5'
+    implementation 'androidx.activity:activity-compose:1.9.2'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.5"
     implementation "androidx.wear:wear-input:1.1.0"
     implementation 'androidx.wear:wear:1.3.0'
 
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.6.8"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.7.1"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
-    androidTestImplementation 'androidx.test:core:1.5.0'
+    androidTestImplementation 'androidx.test:core:1.6.1'
 }
