Recipe Addition - AeroPress Champion 2024
This PR adds a new default recipe, AeroPress Champion 2024

Thank you for the consideration for adding this recipe :)

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://plugins.gradle.org/m2' }
+        // maven { url 'https://plugins.gradle.org/m2' }
+        maven { url "https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.5.0'
