--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        // maven { url 'https://plugins.gradle.org/m2' }
-        maven { url "https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven" }
+        maven { url 'https://plugins.gradle.org/m2' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.5.0'
