--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'com.jaredsburrows.license'
-    id("org.jetbrains.kotlin.plugin.compose") version "2.0.0"
+    id("org.jetbrains.kotlin.plugin.compose") version "2.1.0"
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -27,8 +27,8 @@ android {
     defaultConfig {
         applicationId "com.omelan.cofi"
         minSdkVersion 25
-        targetSdkVersion 35
-        compileSdk 35
+        targetSdkVersion 36
+        compileSdk 36
         versionCode 188
         versionName "1.21.11"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -96,9 +96,6 @@ android {
         jvmToolchain(19)
     }
 
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.8"
-    }
     packagingOptions {
         resources {
             excludes += ['META-INF/DEPENDENCIES',
@@ -140,7 +137,7 @@ configurations {
 
 dependencies {
     implementation project(path: ':cofi-share')
-    ktlint("com.pinterest:ktlint:0.48.2") {
+    ktlint("com.pinterest:ktlint:0.50.0") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
         }
@@ -150,31 +147,31 @@ dependencies {
     instantImplementation('com.google.android.gms:play-services-instantapps:18.1.0')
     playStoreImplementation 'com.google.android.gms:play-services-wearable:19.0.0'
     playStoreImplementation "androidx.wear:wear-remote-interactions:1.1.0"
-    playStoreImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
+    playStoreImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.10.2'
 
     // Tooling support (Previews, etc.)
     debugImplementation "androidx.compose.ui:ui-tooling"
     implementation "androidx.compose.ui:ui-tooling-preview"
 
     // Material Design
-    implementation "androidx.compose.material3:material3:1.3.1"
+    implementation "androidx.compose.material3:material3:1.4.0-alpha15"
     implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.8.6"
+    implementation "androidx.navigation:navigation-compose:2.9.0"
 
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata"
     // Jetpack Utils
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.36.0"
     implementation "androidx.compose.animation:animation-graphics"
 
-    implementation "androidx.activity:activity-compose:1.10.0"
+    implementation "androidx.activity:activity-compose:1.10.1"
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.7.7"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.8.2"
     testImplementation 'junit:junit:4.13.2'
     androidTestUtil 'androidx.test:orchestrator:1.5.1'
 }
