--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     ext {
         kotlin_version = '2.1.0'
         wear_compose_version = '1.4.1'
-        room_version = "2.7.1"
-        compose_bom_version = "2025.06.00"
+        room_version = "2.7.2"
+        compose_bom_version = "2025.06.01"
     }
     repositories {
         google()
@@ -12,14 +12,14 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.12.0-alpha04'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.12.0-alpha08'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.2.0"
         classpath 'com.jaredsburrows:gradle-license-plugin:0.9.8'
     }
 }
 
 plugins {
-    id 'com.google.devtools.ksp' version '2.0.20-1.0.25' apply false
+    id 'com.google.devtools.ksp' version '2.2.0-2.0.2' apply false
 }
 
 allprojects {
