--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'com.jaredsburrows.license'
-    id("org.jetbrains.kotlin.plugin.compose") version "2.1.0"
+    id("org.jetbrains.kotlin.plugin.compose") version "2.2.0"
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -112,6 +112,9 @@ android {
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
     namespace 'com.omelan.cofi'
+    kotlinOptions {
+        jvmTarget = '19'
+    }
 
 }
 
@@ -131,6 +134,7 @@ configurations {
 
 dependencies {
     implementation project(path: ':cofi-share')
+    implementation 'androidx.core:core-ktx:1.16.0'
     ktlint("com.pinterest:ktlint:0.50.0") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
@@ -147,13 +151,13 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview"
 
     // Material Design
-    implementation "androidx.compose.material3:material3:1.4.0-alpha16"
+    implementation "androidx.compose.material3:material3:1.4.0-alpha17"
     implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.9.0"
+    implementation "androidx.navigation:navigation-compose:2.9.1"
 
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata"
