--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
     id "kotlin-parcelize"
-    id("org.jetbrains.kotlin.plugin.compose") version "2.1.0"
+    id("org.jetbrains.kotlin.plugin.compose") version "2.2.0"
 }
 
 android {
@@ -38,6 +38,9 @@ android {
     buildFeatures { // Enables Jetpack Compose for this module
         compose = true
     }
+    kotlinOptions {
+        jvmTarget = '19'
+    }
 }
 
 ksp {
@@ -71,13 +74,13 @@ dependencies {
     implementation "androidx.compose.material3:material3"
     api "androidx.compose.material:material-icons-core:1.7.8"
     api "androidx.datastore:datastore-preferences:1.1.7"
-    api "androidx.wear:wear-ongoing:1.0.0"
     //Room
 
     api "androidx.room:room-runtime:$room_version"
     api 'androidx.test.ext:junit-ktx:1.2.1'
     api "androidx.lifecycle:lifecycle-livedata-ktx:2.9.1"
-    implementation 'androidx.work:work-runtime-ktx:2.10.1'
+    implementation 'androidx.work:work-runtime-ktx:2.10.2'
+    implementation 'androidx.core:core-ktx:1.16.0'
     ksp "androidx.room:room-compiler:$room_version"
     api "androidx.room:room-ktx:$room_version"
     androidTestApi "androidx.room:room-testing:$room_version"
