--- a/wearOS/build.gradle
+++ b/wearOS/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.jaredsburrows.license'
-    id("org.jetbrains.kotlin.plugin.compose") version "2.1.0"
+    id("org.jetbrains.kotlin.plugin.compose") version "2.2.0"
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -68,6 +68,9 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    kotlinOptions {
+        jvmTarget = '19'
+    }
 }
 
 licenseReport {
@@ -101,7 +104,7 @@ dependencies {
     implementation "androidx.wear:wear-input:1.1.0"
     implementation 'androidx.wear:wear:1.3.0'
 
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.8.2"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.8.3"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
     androidTestImplementation 'androidx.test:core:1.6.1'
